Should fix build error. More WIP.
