# config/ClientSwagger.yaml
@@ -441,6 +441,8 @@ paths:
           description: |
             Internal Server Error
 
+    
+
   /users/{userId}/ingredients:
     get:
       tags:
@@ -604,6 +606,10 @@ definitions:
         type: string
       glasswareId:
         type: integer
+      components:
+        type: array
+        items:
+         $ref: "#/definitions/NewRecipeComponent"
     required:
     - name
     - instructions
@@ -641,6 +647,8 @@ definitions:
         type: integer
       recipeId:
         type: integer
+      componentName:
+        type: string
       componentId:
         type: integer
       quantityPart:
@@ -653,6 +661,7 @@ definitions:
     - id
     - recipeId
     - componentId
+    - componentName
     - quantityPart
     - quantityMetric
     - quantityImperial
